// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen agentGroups config import-export] should create the agentGroups: the agentGroups have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ agentgroup => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen agentGroups config import-export] should update the agentGroups: the agentGroups have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ agentgroup => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
